<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/padding_default">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@color/headerColor"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/title"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMonto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/monto_total"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <Switch
        android:id="@+id/switchIVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/incluir_iva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextOtro" />

    <RadioGroup
        android:id="@+id/radioGroupPropina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPersonas">

        <RadioButton
            android:id="@+id/rb10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/diez" />

        <RadioButton
            android:id="@+id/rb15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/quince" />

        <RadioButton
            android:id="@+id/rb20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/veinte" />

        <RadioButton
            android:id="@+id/rbOtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/otro" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextOtro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="creditCardNumber"
        android:hint="Otro (%)"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupPropina"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/calcular"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpiar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchIVA" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:padding="12dp"
        android:text="@string/resultado"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular" />

    <EditText
        android:id="@+id/editTextPersonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/numero_personas"
        android:inputType="number"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMonto" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/limpiar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCalcular"
        app:layout_constraintTop_toBottomOf="@id/switchIVA" />

</androidx.constraintlayout.widget.ConstraintLayout>
